# sentry

./: .gitignore  Makefile  README.md  cfg.txt  pyproject.toml  setup.cfg
sentry/: __init__.py  send_serial.py
sentry/scripts/: __init__.py  sentry.py
tests/: test_send_serial.py
